  when another cell is edited.
- Fix for missing menubar problem under some window managers where menu bar height is
  reported as 0 when the menu hasn't fully realized yet. Now updates the height during
  idle time if it is 0, otherwise no menu is shown.
- Improved list control and tree control selection text theme compatibility by adding
  wxSYS_COLOUR_LISTBOXHIGHLIGHTTEXT colour index.

wxUniv:

- Fixed assertion in tree control sample due to colour index not being supported.

2.8.11:
-------

*** INCOMPATIBLE CHANGES: ***

   Due to an oversight, a bug fix in wxMSW resulted in an incompatible change in
   wxTreeCtrl behaviour: its EVT_TREE_ITEM_ACTIVATED handler now must skip the
   event being processed to allow the item to be toggled by double clicking on it.
   I.e. you need to ensure there is an "event.Skip()" in your item activation
   handler if you do wish to allow the item to be toggled.

All:

- Fixed crashes due to invalid input in PNG and TIFF image loaders (Tielei Wang).
- Fix compilation of wxWidgets headers with recent Sun CC (Brian Cameron).
  NB: If your code uses _T() macro you must either replace it with wxT() to
      use Sun CC or define wxNEEDS__T before including wx headers and avoid
      including many standard headers (again, only with this compiler).
- Added several functions forward compatible with wxWidgets 3.0 (troelsk):
  wxDC::SetDeviceClippingRegion(), wxShowEvent::IsShown(),
  wxIconizeEvent::IsIconized(), wxFileName::StripExtension(),
  wxXmlNode::GetAttribute[s](), wxXmlNode::AddAttribute().
- wxDateTime timezone functions now dynamic (no caching).

All (GUI):

- Add wxBU_EXACTFIT support to wxToggleButton XRC handler (Ronny Krueger).
- wxRTC: fixed AltGr+key input and numeric keypad Delete on Windows.
- wxRTC: added background colour setting to font dialog.
- wxRTC: added wxRICHTEXT_HANDLER_USE_CSS flag for HTML handler to use CSS
  where possible.
- wxRTC: corrected centring and right-justification spacing.